fix table scroll on mobile. fix inner sidenav container on mobile

--- a/tests/dummy/app/styles/demo.scss
+++ b/tests/dummy/app/styles/demo.scss
@@ -23,6 +23,11 @@ table {
   overflow: hidden;
 }
 
+.table-wrapper {
+  flex: 1;
+  overflow: auto;
+}
+
 /***************
  * TYPE DEFAULTS
  ***************/
